@@ -21,10 +21,7 @@
   <permission-map name="Add portal content" acquired="False">
   </permission-map>
   <permission-map name="List folder contents" acquired="False">
-   <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Administrator</permission-role>
   </permission-map>
   <permission-map name="Manage properties" acquired="False">
    <permission-role>Editor</permission-role>
@@ -71,10 +68,7 @@
    <permission-role>Administrator</permission-role>
   </permission-map>
   <permission-map name="List folder contents" acquired="False">
-   <permission-role>Editor</permission-role>
    <permission-role>Manager</permission-role>
-   <permission-role>Owner</permission-role>
-   <permission-role>Administrator</permission-role>
   </permission-map>
   <permission-map name="Manage properties" acquired="False">
    <permission-role>Editor</permission-role>
